fixed #1760 - ff button alignment

--- a/themes/grav/scss/template/_admin.scss
+++ b/themes/grav/scss/template/_admin.scss
@@ -803,6 +803,7 @@ body.sidebar-quickopen #admin-main {
 
             .button {
                 margin: 0;
+                height: 37px;
 
                 &.dropdown-toggle {
                     margin-left: -4px;
